Tests running - 98% coverage

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,6 @@ envlist = py26, py27, py33
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/popcorn
-commands = python runtests.py
+commands = python popcorn/test_project/manage.py test
 deps =
     -r{toxinidir}/requirements-test.txt
