--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@
 language: python
 
 python:
+  - "3.3"
   - "2.7"
   - "2.6"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install: 
+  - pip install -r requirements-test.txt
+  - pip install coveralls
 
 # command to run tests, e.g. python setup.py test
-script: python runtests.py
+script: python popcorn/test_project/manage.py test
+
+after_success: coveralls
